--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "mcp>=1.2.0",
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
+    "tomli>=2.0.0",
+    "tomli-w>=1.0.0",
 ]
 
 [project.optional-dependencies]
