--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,9 @@ multi-agent-mcp = "src.server:main"
 [tool.hatch.build.targets.wheel]
 packages = ["src"]
 
+[tool.hatch.build.targets.wheel.force-include]
+templates = "templates"
+
 [tool.ruff]
 line-length = 100
 target-version = "py310"
