fix: 監査レポート全30課題を修正（Critical バグ3件、セキュリティ6件、テスト+67件、パフォーマンス最適化）

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,20 +9,20 @@ authors = [
     {name = "shiiman"}
 ]
 dependencies = [
-    "mcp>=1.2.0",
-    "pydantic>=2.0.0",
-    "pydantic-settings>=2.0.0",
-    "pyyaml>=6.0.0",
-    "tomli>=2.0.0",
-    "tomli-w>=1.0.0",
+    "mcp>=1.9.4,<2",
+    "pydantic>=2.0.0,<3",
+    "pydantic-settings>=2.0.0,<3",
+    "pyyaml>=6.0.0,<7",
+    "tomli>=2.0.0,<3",
+    "tomli-w>=1.0.0,<2",
 ]
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=8.0.0",
-    "pytest-asyncio>=0.23.0",
-    "pytest-cov>=7.0.0",
-    "ruff>=0.1.0",
+    "pytest>=8.0.0,<9",
+    "pytest-asyncio>=0.23.0,<1",
+    "pytest-cov>=7.0.0,<8",
+    "ruff>=0.1.0,<1",
 ]
 
 [build-system]
